--- a/css/fun/fun.css
+++ b/css/fun/fun.css
@@ -51,7 +51,7 @@ body{
     position: relative;
     flex: auto;
     height: 42vh;
-    width: 90vw;
+    width: 70vw;
 }
 .med-title{
     height:20vh;
@@ -152,31 +152,21 @@ body{
     position: relative;
     top: 30px;
 }
-.med5{
-    height: 230px;
-    width: 230px;
-    border-radius: 30%;
-    border: 5px solid;
-    border-color: #afafaf;
-    float: left;
-    margin-left: 20px;
-    margin-top: 80px;
-    position: relative;
-    top: 30px;
-}
 .word1{
     text-align: center;
-    font-size: 20px;
-    color: royalblue;
+    font-size: 23px;
+    color: #533816;
+    font-weight: bold;
     font-family: jp;
     position: absolute;
     bottom: 35px;
-    left: 35px;
+    left: 25px;
 }
 .word2{
     text-align: center;
-    font-size: 20px;
-    color: royalblue;
+    font-size: 23px;
+    color: #533816;
+    font-weight: bold;
     font-family: jp;
     position: absolute;
     bottom: 35px;
@@ -184,30 +174,23 @@ body{
 }
 .word3{
     text-align: center;
-    font-size: 20px;
-    color: royalblue;
-    font-family: jp;
-    position: absolute;
-    bottom: 45px;
-    left: 55px;
-}
-.word4{
-    text-align: center;
-    font-size: 20px;
-    color: royalblue;
+    font-size: 23px;
+    color: #533816;
+    font-weight: bold;
     font-family: jp;
     position: absolute;
     bottom: 35px;
     left: 25px;
 }
-.word5{
+.word4{
     text-align: center;
-    font-size: 20px;
-    color: royalblue;
+    font-size: 23px;
+    color: #533816;
+    font-weight: bold;
     font-family: jp;
     position: absolute;
     bottom: 35px;
-    left: 45px;
+    left: 25px;
 }
 .circle1{
     height: 220px;
@@ -285,26 +268,6 @@ body{
     transform: scale(1.2);
     transition: 0.5s;
 }
-.circle5{
-    height: 220px;
-    width: 220px;
-    border-radius: 130px;
-    border: 8px solid;
-    border-color: #c3ae95;
-    position: absolute;
-    top: -105px;
-    left: -5px;
-}
-.photo5{
-    position: relative;
-    left: -2px;
-    top: -3px;
-}
-.photo5:hover{
-    transform: scale(1.2);
-    transition: 0.5s;
-}
-
 nav{
     height: 55px;
     position: fixed;
