--- a/css/page2.css
+++ b/css/page2.css
@@ -22,6 +22,7 @@ body{
     width: 100%;
     scroll-behavior: smooth;
     background-color: #f5f1ee;
+    display: inline-block;
 }
 .top{
     float: left;
@@ -44,53 +45,15 @@ body{
     top: 30vh;
     height: 45vh;
     width: 40vw;
-    margin-top: 10vh;
-    margin-left: -20vw;
+    margin-top: 20vh;
+    margin-left: -32vw;
 }
 .food-title{
-    height:200px ;
+    height:250px;
     width: 450px;
     position: relative;
     top: 100px;
     margin-left: 20px;
-}
-.icon1{
-    position: absolute;
-    top: 33px;
-    left: 38px;
-    color: #f8cca0;
-    z-index: 3;
-}
-.circle{
-    position: relative;
-    height:200px ;
-    width: 200px;
-}
-.circleTest{
-    position: relative;
-    height:200px ;
-    width: 200px;
-    border-radius: 100px;
-    background-color: #534741;
-    z-index: 2;
-}
-.ret{
-    width: 350px;
-    height: 165px;
-    border-radius: 75px;
-    background-color: #f8cca0;
-    position: absolute;
-    top: 20px;
-    left: 90px;
-    z-index: 1;
-}
-.fword{
-    text-align: center;
-    margin-top: 40px;
-    margin-left: 60px;
-    font-size: 70px ;
-    font-weight: bold;
-    font-family: jp;
 }
 .meat{
     height: 300px;
