--- a/css/meat.css
+++ b/css/meat.css
@@ -8,7 +8,6 @@
     margin: 0;
     padding: 0;
     -webkit-text-size-adjust: none;
-
 }
 img{
     display: block;
@@ -22,6 +21,7 @@ body{
     width: 100%;
     scroll-behavior: smooth;
     background-color: #f5f1ee;
+    display: inline-block;
 }
 .content{
     height: 60vh;
