--- a/css/mind/mind.css
+++ b/css/mind/mind.css
@@ -167,7 +167,8 @@ body{
 .word1{
     text-align: center;
     font-size: 20px;
-    color: royalblue;
+    color: #533816;
+    font-weight: bold;
     font-family: jp;
     position: absolute;
     bottom: 35px;
@@ -176,7 +177,8 @@ body{
 .word2{
     text-align: center;
     font-size: 20px;
-    color: royalblue;
+    color: #533816;
+    font-weight: bold;
     font-family: jp;
     position: absolute;
     bottom: 35px;
@@ -185,29 +187,32 @@ body{
 .word3{
     text-align: center;
     font-size: 20px;
-    color: royalblue;
+    color: #533816;
+    font-weight: bold;
     font-family: jp;
     position: absolute;
     bottom: 35px;
-    left: 25px;
+    left: 15px;
 }
 .word4{
     text-align: center;
     font-size: 20px;
-    color: royalblue;
+    color: #533816;
+    font-weight: bold;
     font-family: jp;
     position: absolute;
-    bottom: 35px;
-    left: 25px;
+    bottom: 25px;
+    left: 45px;
 }
 .word5{
     text-align: center;
     font-size: 20px;
-    color: royalblue;
+    color: #533816;
+    font-weight: bold;
     font-family: jp;
     position: absolute;
     bottom: 35px;
-    left: 25px;
+    left: 15px;
 }
 .circle1{
     height: 220px;
