--- a/css/money.css
+++ b/css/money.css
@@ -22,13 +22,15 @@ body{
     width: 100%;
     scroll-behavior: smooth;
     background-color: #f5f1ee;
+    font-family: jp;
+    display: inline-block;
 }
 .KW2{
     display: flex;
-    height: auto;
+    height: 100%;
     width: 70vw;
     background-color: #f5f1ee;
-    position: absolute;
+    position: relative;
     left: 15vw;
     top: 10vh;
 }
@@ -82,14 +84,12 @@ body{
     z-index: 2;
 }
 .article1{
-    position: absolute;
-    height: 40vh;
-    flex: auto;
+    height: 50vh;
     width: 70vw;
+    position: relative;
     background-color: #f5f1ee;
-    font-family: jp;
-    top: 40vh;
-    left: 2vw;
+    margin-top: 25vh;
+    margin-left: -10vw;
 }
 .article1>h1{
     font-size: 36px;
@@ -104,11 +104,14 @@ body{
     position: relative;
     height: 25vh;
     width: 70vw;
+    margin-top: 10vh;
+    margin-left: -40vw;
 }
 .sheet{
     height: 50vh;
     width: 70vw;
-    position: absolute;
+    position: relative;
+    margin-left: -20vw;
     display: flex;
 }
 .part1{
@@ -118,6 +121,7 @@ body{
     font-weight: bold;
     position: relative;
     flex: auto;
+    margin-left: -20vw;
 }
 .part2{
     height: 50vh;
@@ -140,12 +144,12 @@ body{
     flex: auto;
 }
 .article2{
-    height: 80vh;
+    height: 50vh;
     width: 70vw;
-    position: absolute;
-    top: 140vh;
+    position: relative;
     background-color: #f5f1ee;
-    left: 2vw;
+    margin-top: 15vh;
+    margin-left: -10vw;
 }
 .article2>h1{
     font-size: 36px;
@@ -180,12 +184,12 @@ td:hover {
     background-color: #aad9e2;
 }
 .article3{
-    height: 530px;
-    width: 100%;
-    position: absolute;
-    top: 200vh;
+    height: 50vh;
+    width: 70vw;
+    position: relative;
     background-color: #f5f1ee;
-    left: 2vw;
+    margin-top: 15vh;
+    margin-left: -10vw;
 }
 .article3>h1{
     font-size: 36px;
@@ -197,12 +201,12 @@ td:hover {
     font-family: jp;
 }
 .article4{
-    height: 570px;
-    width: 100%;
-    position: absolute;
-    top: 255vh;
+    height: 50vh;
+    width: 70vw;
+    position: relative;
     background-color: #f5f1ee;
-    left: 2vw;
+    margin-top: 15vh;
+    margin-left: -10vw;
 }
 .article4>h1{
     font-size: 36px;
@@ -214,12 +218,12 @@ td:hover {
     font-family: jp;
 }
 .article5{
-    height: 860px;
-    width: 100%;
-    position: absolute;
-    top: 310vh;
+    height: 50vh;
+    width: 70vw;
+    position: relative;
     background-color: #f5f1ee;
-    left: 2vw;
+    margin-top: 15vh;
+    margin-left: -10vw;
 }
 .article5>h1{
     font-size: 36px;
@@ -231,12 +235,12 @@ td:hover {
     font-family: jp;
 }
 .article6{
-    height: 30vh;
-    width: 100%;
-    position: absolute;
-    top: 395vh;
+    height: 50vh;
+    width: 70vw;
+    position: relative;
     background-color: #f5f1ee;
-    left: 2vw;
+    margin-top: 15vh;
+    margin-left: -10vw;
 }
 .article6>h1{
     font-size: 36px;
