--- a/css/train/train.css
+++ b/css/train/train.css
@@ -166,48 +166,53 @@ body{
 }
 .word1{
     text-align: center;
-    font-size: 20px;
-    color: royalblue;
-    font-family: jp;
-    position: absolute;
-    bottom: 35px;
-    left: 35px;
-}
-.word2{
-    text-align: center;
-    font-size: 20px;
-    color: royalblue;
+    font-size: 23px;
+    color: #533816;
+    font-weight: bold;
     font-family: jp;
     position: absolute;
     bottom: 35px;
     left: 25px;
+}
+.word2{
+    text-align: center;
+    font-size: 23px;
+    color: #533816;
+    font-weight: bold;
+    font-family: jp;
+    position: absolute;
+    bottom: 35px;
+    left: 10px;
 }
 .word3{
     text-align: center;
     font-size: 20px;
-    color: royalblue;
+    color: #533816;
+    font-weight: bold;
     font-family: jp;
     position: absolute;
     bottom: 45px;
-    left: 55px;
+    left: 10px;
 }
 .word4{
     text-align: center;
     font-size: 20px;
-    color: royalblue;
+    color: #533816;
+    font-weight: bold;
     font-family: jp;
     position: absolute;
-    bottom: 35px;
+    bottom: 25px;
     left: 25px;
 }
 .word5{
     text-align: center;
-    font-size: 20px;
-    color: royalblue;
+    font-size: 23px;
+    color: #533816;
+    font-weight: bold;
     font-family: jp;
     position: absolute;
     bottom: 35px;
-    left: 45px;
+    left: 35px;
 }
 .circle1{
     height: 220px;
