--- a/css/meat.css
+++ b/css/meat.css
@@ -8,6 +8,7 @@
     margin: 0;
     padding: 0;
     -webkit-text-size-adjust: none;
+    /*border: 1px solid red;*/
 }
 img{
     display: block;
@@ -24,19 +25,17 @@ body{
     display: inline-block;
 }
 .content{
-    height: 60vh;
+    height: 170vh;
     width: 70vw;
-    margin-left: 50px;
 }
 .article{
-    height: 100%;
+    height: 170vh;
     display: flex;
     width: 70vw;
     position: absolute;
     background-color: #f5f1ee;
     font-family: jp;
-    top: 50px;
-    left: 10vw;
+    margin-left: 15vw;
 }
 .article>h1{
     font-size: 36px;
@@ -77,8 +76,8 @@ body{
     font-family: jp;
     font-weight: bold;
     background-color: rgb(192, 151, 112);
-    margin-left: 60vw;
-    margin-top: 50px;
+    margin-left: 55vw;
+    bottom: 0;
 }
 .button:hover{
     transform: scale(1.1);
