--- a/css/snack.css
+++ b/css/snack.css
@@ -27,17 +27,15 @@ body{
 .content{
     height: 60vh;
     width: 70vw;
-    margin-left: 50px;
 }
 .article{
-    height: 100%;
+    height: 230vh;
     display: flex;
     width: 70vw;
     position: absolute;
     background-color: #f5f1ee;
     font-family: jp;
-    top: 50px;
-    left: 10vw;
+    margin-left: 15vw;
 }
 .article>h1{
     font-size: 36px;
@@ -97,8 +95,8 @@ body{
     font-family: jp;
     font-weight: bold;
     background-color: rgb(192, 151, 112);
-    margin-left: 60vw;
-    margin-top: 50px;
+    margin-left: 55vw;
+    bottom: 0;
 }
 .button:hover{
     transform: scale(1.1);
