--- a/css/med/med1.css
+++ b/css/med/med1.css
@@ -24,17 +24,21 @@ body{
     background-color: #f5f1ee;
 }
 .video{
-    flex: auto;
-    top: 10vh;
-    left: 20vw;
     width: 50vw;
     height: 30vw;
+    margin-top: 5vh;
+    margin-left: 15vw;
     position: relative;
 }
+.article{
+    position: absolute;
+    height: 95vh;
+    width: 80vw;
+    margin-left: 10vw;
+}
 .content{
-    height: 60vh;
-    width: 70vw;
-    margin-left: 50px;
+    height: 80vh;
+    width: 80vw;
 }
 .top{
     float: left;
@@ -53,8 +57,8 @@ body{
     font-family: jp;
     font-weight: bold;
     background-color: rgb(192, 151, 112);
-    margin-left: 65vw;
-    margin-top:20vh;
+    margin-left: 55vw;
+    bottom: 0;
 }
 .button:hover{
     transform: scale(1.1);
