--- a/css/med/med3.css
+++ b/css/med/med3.css
@@ -24,22 +24,21 @@ body{
     background-color: #f5f1ee;
 }
 .content{
-    height: 60vh;
+    position: relative;
+    height: 135vh;
     width: 70vw;
-    margin-left: 50px;
 }
 .content>h2{
     font-size: 46px;
 }
 .article{
-    height: 100%;
+    height: 135vh;
     display: flex;
     width: 70vw;
     position: absolute;
     background-color: #f5f1ee;
     font-family: jp;
-    top: 50px;
-    left: 10vw;
+    margin-left: 15vw;
 }
 .article>h1{
     font-size: 36px;
@@ -93,8 +92,8 @@ a:hover{
     font-family: jp;
     font-weight: bold;
     background-color: rgb(192, 151, 112);
-    margin-left: 60vw;
-    margin-top: 50px;
+    margin-left: 55vw;
+    bottom: 0;
 }
 .button:hover{
     transform: scale(1.1);
